--- a/resources.html
+++ b/resources.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="Downloads/ribbon.png" alt="Alzheimer's Ribbon" class="ribbon-logo">
+    <img src="ribbon.png" alt="Alzheimer's Ribbon" class="ribbon-logo">
     <h1>Alzheimer's Resources</h1>
     <nav>
       <ul>
