--- a/stories.html
+++ b/stories.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="Downloads/ribbon.png" alt="Alzheimer's Ribbon" class="ribbon-logo">
+    <img src="ribbon.png" alt="Alzheimer's Ribbon" class="ribbon-logo">
     <h1>Personal Stories</h1>
     <nav>
       <ul>
