--- a/information.html
+++ b/information.html
@@ -23,11 +23,13 @@
   </header>
 
   <main>
-    <section id="information">
-      <div class="blog-post">
-        <h3>What is Alzheimer's?</h3>
-        <p>A progressive brain disorder affecting memory and cognition.</p>
-      </div>
+     <section id="information">
+      <a href="what-is-alzheimers.html" class="blog-post-link">
+        <div class="blog-post">
+          <h3>What is Alzheimer's?</h3>
+          <p>A progressive brain disorder affecting memory and cognition.</p>
+        </div>
+      </a>
       <div class="blog-post">
         <h3>Stages of Alzheimer's</h3>
         <p>Learn about early, middle, and late-stage symptoms.</p>
