--- a/what-is-alzheimers.html
+++ b/what-is-alzheimers.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>What is Alzheimer's?</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>What is Alzheimer's?</h1>
+    <a href="information.html">← Back to Information</a>
+  </header>
+  <main>
+    <p>Alzheimer's disease is a progressive brain disorder that slowly destroys memory and thinking skills, and eventually, the ability to carry out simple tasks.</p>
+  </main>
+</body>
+</html>
 
