--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Alzheimer's Blog</h3>
+                    <h3>Alzheimer's Blog Memory Lane</h3>
                     <p>Providing reliable information and support for families affected by Alzheimer's and other dementias.</p>
                     <div class="helpline" style="background: transparent; border: 2px solid var(--accent); margin-top: 1rem;">
                         <i class="fas fa-phone"></i> 800.272.3900
