--- a/index.html
+++ b/index.html
@@ -321,24 +321,24 @@
                 <article class="card">
                     <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Caregiver story" class="card-img">
                     <div class="card-content">
-                        <h3>A Daughter's Journey</h3>
-                        <p>How Maria found strength while caring for her father with Alzheimer's and the lessons she learned along the way.</p>
+                        <h3>Title</h3>
+                        <p>Description</p>
                         <a href="#" class="read-more">Read Story →</a>
                     </div>
                 </article>
                 <article class="card">
                     <img src="https://images.unsplash.com/photo-1579684385127-1ef15d508118?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Early diagnosis story" class="card-img">
                     <div class="card-content">
-                        <h3>Living with Early-Onset</h3>
-                        <p>At 58, John shares his experience of being diagnosed with early-onset Alzheimer's and how he's adapting.</p>
+                        <h3>Title</h3>
+                        <p>Description</p>
                         <a href="#" class="read-more">Read Story →</a>
                     </div>
                 </article>
                 <article class="card">
                     <img src="https://images.unsplash.com/photo-1503454537195-1dcabb73ffb9?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Family story" class="card-img">
                     <div class="card-content">
-                        <h3>When Grandma Forgets</h3>
-                        <p>A family's approach to helping their children understand and connect with their grandmother who has dementia.</p>
+                        <h3>Title</h3>
+                        <p>Description</p>
                         <a href="#" class="read-more">Read Story →</a>
                     </div>
                 </article>
