--- a/tips/tip1.html
+++ b/tips/tip1.html
@@ -1,76 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Communication Strategies | Memory Support</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Communication Strategies | Memory Lane</title>
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div class="container header-content">
-            <div class="logo">
-                <i class="fas fa-brain"></i>
-                <span>Memory Support</span>
-            </div>
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="../index.html#stories">Stories</a></li>
-                    <li><a href="../index.html#tips">Tips</a></li>
-                    <li><a href="../index.html#research">Research</a></li>
-                    <li><a href="../index.html#resources">Resources</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    
-    <main class="main">
-        <div class="container">
-            <div class="article-content">
-                <h1>Effective Communication Strategies</h1>
-                <p>Communicating with a loved one who has Alzheimer's requires patience and adaptation. As the disease progresses, traditional conversation becomes more challenging, but these strategies can help maintain meaningful connection:</p>
-                <p><strong>1. Simplify your language:</strong> Use short, simple sentences and ask one question at a time. Instead of "What would you like to drink with your lunch - water, juice, or tea?" try "Would you like juice?" with a visual cue of holding up the glass.</p>
-                <p><strong>2. Practice active listening:</strong> Even if what they're saying doesn't make complete sense, focus on the emotion behind the words. Respond to feelings rather than correcting facts. A gentle touch or nod can communicate understanding when words fail.</p>
-                <p><strong>3. Create a calm environment:</strong> Reduce background noise and distractions. Make eye contact at their level. Allow plenty of time for responses - it may take 30-45 seconds for them to process and reply to a simple question.</p>
-                <a href="../index.html#tips" class="back-link"><i class="fas fa-arrow-left"></i> Back to Caregiving Tips</a>
-            </div>
-        </div>
-    </main>
-    
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Memory Support</h3>
-                    <p>Providing reliable information and support for families affected by Alzheimer's and dementia.</p>
-                    <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="../index.html#stories">Stories</a></li>
-                        <li><a href="../index.html#tips">Tips</a></li>
-                        <li><a href="../index.html#research">Research</a></li>
-                        <li><a href="../index.html#resources">Resources</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Alzheimer's Help</h3>
-                    <p><i class="fas fa-phone"></i> 24/7 Helpline: <a href="tel:8002723900">800.272.3900</a></p>
-                    <p><i class="fas fa-info-circle"></i> Available in 200+ languages</p>
-                </div>
-            </div>
-            <p class="copyright">© 2023 Memory Support. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="../js/main.js"></script>
+  <div class="container">
+    <a href="../index.html" class="back-button">
+      <i class="fas fa-arrow-left"></i> Back to Home
+    </a>
+
+    <article class="subpage-article">
+      <h1>Communication Strategies</h1>
+      <img src="https://images.unsplash.com/photo-1581056771107-24ca5f033842?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Communication">
+      <p>Practical techniques: using short sentences, maintaining eye contact, and validating emotions even when facts are misremembered...</p>
+    </article>
+  </div>
 </body>
 </html>
