--- a/tips/tip2.html
+++ b/tips/tip2.html
@@ -1,76 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Safety Modifications | Memory Support</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home Safety Modifications | Memory Lane</title>
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div class="container header-content">
-            <div class="logo">
-                <i class="fas fa-brain"></i>
-                <span>Memory Support</span>
-            </div>
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="../index.html#stories">Stories</a></li>
-                    <li><a href="../index.html#tips">Tips</a></li>
-                    <li><a href="../index.html#research">Research</a></li>
-                    <li><a href="../index.html#resources">Resources</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    
-    <main class="main">
-        <div class="container">
-            <div class="article-content">
-                <h1>Home Safety Modifications</h1>
-                <p>Creating a safe environment is crucial as Alzheimer's progresses. These modifications can help prevent accidents while maintaining independence:</p>
-                <p><strong>1. Reduce fall risks:</strong> Install grab bars in bathrooms, remove loose rugs, and ensure adequate lighting throughout the home. Use contrasting colors to mark step edges and changes in floor elevation. Consider a monitoring system for nighttime wandering.</p>
-                <p><strong>2. Secure hazardous items:</strong> Lock away cleaning supplies, medications, and sharp objects. Install safety knobs on stoves and consider automatic shut-off devices. Lower the temperature on water heaters to prevent scalding.</p>
-                <p><strong>3. Simplify the environment:</strong> Reduce clutter that can cause confusion or agitation. Create clear pathways between frequently used areas. Label doors and drawers with pictures or words to help with navigation. Keep frequently used items in consistent, visible locations.</p>
-                <a href="../index.html#tips" class="back-link"><i class="fas fa-arrow-left"></i> Back to Caregiving Tips</a>
-            </div>
-        </div>
-    </main>
-    
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Memory Support</h3>
-                    <p>Providing reliable information and support for families affected by Alzheimer's and dementia.</p>
-                    <div class="social-icons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="../index.html#stories">Stories</a></li>
-                        <li><a href="../index.html#tips">Tips</a></li>
-                        <li><a href="../index.html#research">Research</a></li>
-                        <li><a href="../index.html#resources">Resources</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Alzheimer's Help</h3>
-                    <p><i class="fas fa-phone"></i> 24/7 Helpline: <a href="tel:8002723900">800.272.3900</a></p>
-                    <p><i class="fas fa-info-circle"></i> Available in 200+ languages</p>
-                </div>
-            </div>
-            <p class="copyright">© 2023 Memory Support. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="../js/main.js"></script>
+  <div class="container">
+    <a href="../index.html" class="back-button">
+      <i class="fas fa-arrow-left"></i> Back to Home
+    </a>
+
+    <article class="subpage-article">
+      <h1>Home Safety Modifications</h1>
+      <img src="https://images.unsplash.com/photo-1543362906-acfc16c67564?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Home safety">
+      <p>Key changes: installing grab bars, removing tripping hazards, using automatic shut-off devices, and securing dangerous items...</p>
+    </article>
+  </div>
 </body>
 </html>
