--- a/stories/story1.html
+++ b/stories/story1.html
@@ -34,7 +34,7 @@
             <article class="subpage-article">
                 <h1>10-Year Alzheimer's Journey</h1>
                 <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Elderly couple">
-                <p>[Full article content here...]</p>
+                <p>[Full article content here....]</p>
             </article>
         </div>
     </main>
