--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
     
     <section class="hero">
         <div class="container hero-content">
-            <h1>Navigating the Alzheimer's Journey Together</h1>
-            <p>Find support, resources, and hope for those affected by Alzheimer's disease and other dementias.</p>
+            <h1>Jonathan and Bhanu's project on Alzheimers</h1>
+            <p>Find stories, tips, and updates on alzheimers research here.</p>
             <a href="#stories" class="btn">Get Support Now</a>
         </div>
     </section>
