--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
     <section class="hero">
         <div class="container hero-content">
             <h1>Jonathan and Bhanu's project on Alzheimers</h1>
-            <p>Find stories, tips, and updates on alzheimers research here.</p>
-            <a href="#stories" class="btn">Get Support Now</a>
+            <p>Find stories, tips, and updates on Alzheimers research here.</p>
+            <a href="alz.org" class="btn">Get Support Now</a>
         </div>
     </section>
     
