--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <div class="container hero-content">
             <h1>Jonathan and Bhanu's project on Alzheimers</h1>
             <p>Find stories, tips, and updates on Alzheimers research here.</p>
-            <a href="alz.org" class="btn">Get Support Now</a>
+            <a href="https://www.alz.org" class="btn">Get Support Now</a>
         </div>
     </section>
     
