--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
     <section class="hero">
         <div class="container hero-content">
-            <h1>Jonathan and Bhanu's project on Alzheimers</h1>
+            <h1>Jonathan and Bhanu's Project on Alzheimers</h1>
             <p>Find stories, tips, and updates on Alzheimers research here.</p>
             <a href="https://www.alz.org" target="_blank" rel="noopener noreferrer" class="btn">Get Support Now</a>
         </div>
