--- a/stories/story2.html
+++ b/stories/story2.html
@@ -195,7 +195,7 @@
 
   <main>
     <div class="container">
-      <h1 class="page-title">A Daughter's Reflections</h1>
+      <h1 class="page-title">From Caring to Fighting and Advocating</h1>
       <div class="content">
         <p>Kathy Siggins cared for her husband, Gene, who was diagnosed with Alzheimer's disease in 1990. For nearly 13 years, she managed his care at home, facing the progressive challenges of the disease. As Gene's condition worsened, Kathy experienced profound isolation, noting that friends and colleagues gradually stopped visiting due to the changes in Gene's behavior.</p>
 
