--- a/stories/story1.html
+++ b/stories/story1.html
@@ -159,7 +159,7 @@
 
   <main>
     <div class="container">
-      <h1 class="page-title">A Daughter's Reflections</h1>
+      <h1 class="page-title">Jean and Leonard’s Story: Facing Alzheimer’s Together</h1>
       <div class="content">
         <p>Jean and Leonard Georges met many years ago while attending a dance at their alma mater, the University of Wyoming. After raising three children and building a fulfilling life together, Jean began noticing subtle changes in Leonard's behavior about eight years ago. He started asking repetitive questions and making uncharacteristic business decisions, which was concerning given his history of sound judgment.</p>
 
