--- a/stories/story3.html
+++ b/stories/story3.html
@@ -186,7 +186,7 @@
 
   <main>
     <div class="container">
-      <h1 class="page-title">A Daughter's Reflections</h1>
+      <h1 class="page-title">A Simple Explanation for Kids</h1>
       <div class="content">
         <p>Alzheimer's disease is a condition that affects the brain and causes people to slowly forget things and have trouble thinking clearly. It usually happens to older adults and can make it hard for them to remember names, places, or even family members.</p>
 
