--- a/tips/tip1.html
+++ b/tips/tip1.html
@@ -186,7 +186,7 @@
 
   <main>
     <div class="container">
-      <h1 class="page-title">A Daughter's Reflections</h1>
+      <h1 class="page-title">Communication Strategies</h1>
       <div class="content">
         <p>As Alzheimer's disease progresses, communication with a loved one becomes increasingly challenging, making intentional strategies essential for maintaining connection and minimizing frustration.</p>
 
