--- a/tips/tip2.html
+++ b/tips/tip2.html
@@ -193,7 +193,7 @@
 
   <main>
     <div class="container">
-      <h1 class="page-title">A Daughter's Reflections</h1>
+      <h1 class="page-title">Home Modifications</h1>
       <div class="content">
         <p>When caring for a person with Alzheimer's disease at home, making safety modifications is essential to prevent accidents and reduce confusion. People with Alzheimer's may forget how to use everyday objects, wander, or become disoriented, which increases the risk of injury.</p>
 
