--- a/research/research1.html
+++ b/research/research1.html
@@ -193,7 +193,7 @@
 
   <main>
     <div class="container">
-      <h1 class="page-title">A Daughter's Reflections</h1>
+      <h1 class="page-title">Early Detection</h1>
       <div class="content">
         <p>Recent research has revolutionized the early detection of Alzheimer's disease, focusing on non-invasive and highly accurate diagnostic methods. Blood-based biomarkers like p-tau217 and MTBR-tau243 now offer over 90% accuracy in identifying Alzheimer's, making them strong alternatives to spinal taps and costly brain imaging.</p>
 
