--- a/research/research3.html
+++ b/research/research3.html
@@ -186,7 +186,7 @@
 
   <main>
     <div class="container">
-      <h1 class="page-title">A Daughter's Reflections</h1>
+      <h1 class="page-title">Avoiding Alzheimer's</h1>
       <div class="content">
         <p>Recent studies underscore the significant impact of lifestyle choices—particularly diet, exercise, and cognitive engagement—on reducing the risk of Alzheimer's disease (AD). Adherence to the MIND diet, which combines elements of the Mediterranean and DASH diets, has been associated with a 53% reduction in AD risk among strict followers, and a 35% reduction among moderate adherents. This diet emphasizes the consumption of leafy greens, berries, nuts, and fish, while limiting red meat, butter, and sweets.</p>
 
