--- a/index.html
+++ b/index.html
@@ -513,6 +513,10 @@
                     </div>
                     <h3 class="resource-title">Support Groups</h3>
                     <p>Connect with others who understand what you're going through.</p>
+                    <a href="https://www.google.com/search?q=alzheimer%27s+support+groups+near+me" target="_blank" class="btn">
+    Find Support Groups
+</a>
+
                 </div>
                 
                 <div class="resource-card">
